--- a/Bot_timecheck/.classpath
+++ b/Bot_timecheck/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_241">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/oraclexe/sqldeveloper/jdbc/lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
