--- a/Bot_timecheck/.project
+++ b/Bot_timecheck/.project
@@ -20,4 +20,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/main/java/listener/LunchListener.class</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Downloads/LunchListener.class</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
