--- a/Bot_timecheck/.settings/org.eclipse.core.resources.prefs
+++ b/Bot_timecheck/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,4 @@ encoding//src/main/java/listener/TimeCheckcmd.java=UTF-8
 encoding//src/main/java/listener/user.java=UTF-8
 encoding//src/main/java/oracleDB/DBConnection.java=UTF-8
 encoding//src/main/java/oracleDB/OracleDB.java=UTF-8
+encoding/build.gradle=UTF-8
