--- a/Bot_timecheck/build.gradle
+++ b/Bot_timecheck/build.gradle
@@ -26,14 +26,26 @@ dependencies {
     implementation 'com.google.guava:guava:26.0-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:4.12"
+    
+    
+    // https://mvnrepository.com/artifact/oracle/ojdbc6
+	//compile group: 'oracle', name: 'ojdbc6', version: '11.2.0.3'
     
     // https://mvnrepository.com/artifact/net.dv8tion/JDA
-	compile group: 'net.dv8tion', name: 'JDA', version: '4.0.0_45'
+	compile group: 'net.dv8tion', name: 'JDA', version: '4.2.0_222'
 	
 	implementation 'org.javacord:javacord:3.0.6'
 	
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+	testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.2'
+	// org.slf4j. ... loger..
 	
+	
+	
+}
+test {
+    useJUnitPlatform()
 }
 
 /*
